--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.29.0",
     "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
